Add link to repo

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 <body>
     <canvas id="canvas" height="720" width="1280"></canvas>
     <div>
+        <span>View the <a href="https://github.com/SN9NV/Postgres-Tuple-Freezing-Demo">GitHub Repo</a></span>
+    </div>
+    <div>
         <input id="simCheckbox" type="checkbox" />
         <span>Simulate XID Exhaustion</span>
     </div>
